objects/Product_Offers__c.object
<CustomObject>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Coupons</label>
        <referenceTo>Coupons__c</referenceTo>
        <relationshipLabel>Product Offers</relationshipLabel>
        <relationshipName>Product_Offers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Offers</relationshipLabel>
        <relationshipName>Product_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Offers</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>